# GCP-cost-monitoring

./: Dockerfile  pyproject.toml
dashboards/: General cloud costs-1765406996775.json  Group cloud costs-1765407021209.json  User cloud costs-1765407033186.json
src/jupyterhub_cost_monitoring/: app.py  cache.py  const_cost_gcp.py  const_usage.py  date_utils.py  logs.py  query_cost_gcp.py  query_metadata_gcp.py  query_usage.py
